# WakeOnPi

./: .coverage  .gitignore  .pylintrc  CONTRIBUTING.md  coverage.xml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.py  venv.sh  wakeonpi.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: beta-release.yml  release.yml  security.yml  tests.yml  unit-tests.yml  wiki-sync.yml
docs/: api.md  architecture.md  configuration.md  development.md  home.md  installation.md
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_browser.py  test_camera.py  test_config.py  test_db.py  test_display.py  test_import.py  test_imports.py  test_logging.py  test_motion.py  test_mqtt.py  test_overlay.py  test_recorder.py  test_state.py  test_system.py  test_updater.py  test_wakeonpi.db
wakeonpi/: __init__.py  app.py  auth.py  browser.py  camera.py  config.py  db.py  display.py  github_updater.py  logging_config.py  motion.py  mqtt.py  overlay.py  recorder.py  settings.json  settings_template.json  state.py  system.py  updater.py
wakeonpi/templates/: login.html  rollback.html  settings.html  setup.html  update.html
wakeonpi/updates/: manifest.json
