[project]
name = "WakeOnPi"
version = "0.0.13"
description = "Raspberry Pi camera service with motion detection, streaming, and MQTT integration"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "WakeOnPi Contributors"}
]
keywords = ["raspberry-pi", "camera", "motion-detection", "mqtt", "streaming"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video :: Capture"
]
dependencies = [
    "flask>=3.0",
    "numpy>=1.20",
    "opencv-python>=4.0",
    "paho-mqtt>=2.0",
    "picamera2>=0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/vithurshanselvarajah/WakeOnPi"
Documentation = "https://github.com/vithurshanselvarajah/WakeOnPi/tree/main/docs"
Repository = "https://github.com/vithurshanselvarajah/WakeOnPi.git"
Issues = "https://github.com/vithurshanselvarajah/WakeOnPi/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=wakeonpi --cov-report=term-missing --cov-report=html --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["wakeonpi"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:"
]
